2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/entity/CategoryItemEntity.java
	(series): Removed, previously deprecated,
	(category): Likewise,
	(categoryIndex): Likewise,
	(CategoryItemEntity()): Likewise,
	(getSeries): Likewise,
	(setSeries): Likewise,
	(getCategory): Likewise,
	(setCategory): Likewise,
	(getCategoryIndex): Likewise,
	(setCategoryIndex): Likewise,
	* source/org/jfree/chart/entity/junit/CategoryItemEntityTests.java
	(testEquals): Updated for removed methods.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ClipPath.java: Removed,
	* source/org/jfree/chart/DrawableLegendItem.java: Likewise.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/editor/PaletteChooserPanel.java: Removed,
	* source/org/jfree/chart/editor/PaletteSample.java: Likewise.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/block/AbstractBlock.java
	(getBorder): Removed, previously deprecated,
	(setBorder(BlockBorder)): Likewise,
	(setBorder(double, double, double, double)): Likewise,
	* source/org/jfree/chart/title/PaintScaleLegend.java
	(draw(Graphics2D, Rectangle2D, Object)): Fixed deprecation warnings,
	* tests/org/jfree/chart/title/junit/CompositeTitleTests.java
	(testEquals): Likewise.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/ValueAxis.java
	(DEFAULT_LOWER_BOUND): Removed, previously deprecated,
	(DEFAULT_UPPER_BOUND): Likewise.

2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/ColorBar.java: Removed (previously 
	deprecated);
	* source/org/jfree/chart/editor/DefaultColorBarEditor.java: Likewise,
	* source/org/jfree/chart/editor/DefaultPlotEditor.java
	(colorBarAxisPropertyPanel): Removed,
	(DefaultPlotEditor(Plot)): Removed references to 
	colorBarAxisPropertyPanel,
	(updatePlotProperties): Likewise,