@@ -1,142 +1,0 @@
-/* ===========================================================
- * JFreeChart : a free chart library for the Java(tm) platform
- * ===========================================================
- *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
- *
- * Project Info:  http://www.jfree.org/jfreechart/index.html
- *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
- * (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
- * License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
- *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
- * in the United States and other countries.]
- *
- * ------------------
- * ContourEntity.java
- * ------------------
- * (C) Copyright 2002-2007, by David M. O'Donnell and Contributors.
- *
- * Original Author:  David M. O'Donnell;
- * Contributor(s):   David Gilbert (for Object Refinery Limited);
- *
- * $Id: ContourEntity.java,v 1.3.2.4 2007/04/04 09:06:38 mungady Exp $
- *
- * Changes
- * -------
- * 26-Nov-2002 : Version 1 contributed by David M. O'Donnell (DG);
- * 20-May-2004 : Added equals() and clone() methods and implemented 
- *               Serializable (DG);
- * ------------- JFREECHART 1.0.x ---------------------------------------------
- * 02-Feb-2007 : Removed author tags all over JFreeChart sources (DG);
- *
- */
-
-package org.jfree.chart.entity;
-
-import java.awt.Shape;
-import java.io.Serializable;
-
-import org.jfree.chart.plot.XYPlot;
-import org.jfree.chart.renderer.xy.XYBlockRenderer;
-
-/**
- * Represents an item on a contour chart.
- *
- * @deprecated This class is no longer supported (as of version 1.0.4).  If 
- *     you are creating contour plots, please try to use {@link XYPlot} and 
- *     {@link XYBlockRenderer}.
- */
-public class ContourEntity extends ChartEntity 
-                           implements Cloneable, Serializable {
-
-    /** For serialization. */
-    private static final long serialVersionUID = 1249570520505992847L;
-    
-    /** Holds the index into the dataset for this entity. */
-    private int index = -1;
-
-    /**
-     * Constructor for ContourEntity.
-     *
-     * @param area  the area.
-     * @param toolTipText  the tooltip text.
-     */
-    public ContourEntity(Shape area, String toolTipText) {
-        super(area, toolTipText);
-    }
-
-    /**
-     * Constructor for ContourEntity.
-     *
-     * @param area  the area.
-     * @param toolTipText  the tooltip text.
-     * @param urlText  the URL text.
-     */
-    public ContourEntity(Shape area, String toolTipText, String urlText) {
-        super(area, toolTipText, urlText);
-    }
-
-    /**
-     * Returns the index.
-     *
-     * @return The index.
-     */
-    public int getIndex() {
-        return this.index;
-    }
-
-    /**
-     * Sets the index.
-     *
-     * @param index  the index.
-     */
-    public void setIndex(int index) {
-        this.index = index;
-    }
-
-    /**
-     * Tests the entity for equality with an arbitrary object.
-     * 
-     * @param obj  the object (<code>null</code> permitted).
-     * 
-     * @return A boolean.
-     */
-    public boolean equals(Object obj) {
-        if (obj == this) {
-            return true;   
-        }
-        if (obj instanceof ContourEntity && super.equals(obj)) {
-            ContourEntity ce = (ContourEntity) obj;
-            if (this.index != ce.index) {
-                return false;   
-            }
-            return true;
-        }
-        return false;
-    }
-    
-    /**
-     * Returns a clone of the entity.
-     * 
-     * @return A clone.
-     * 
-     * @throws CloneNotSupportedException if cloning is not supported.
-     */
-    public Object clone() throws CloneNotSupportedException {
-        return super.clone();
-    }
-    
-}
